# banking_app_rewrite

./: .gitignore  Cargo.toml  README.md
src/: account.rs  bank_statement.rs  checking.rs  credit.rs  customer.rs  lib.rs  main.rs  main_menu.rs  person.rs  savings.rs
src/test_data/: mock_customers.csv  mock_customers_malformed.csv
tests/: integration_test.rs
