[package]
name = "banking_app_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
cargo-watch = "8.4.0"
chrono = "0.4.26"
csv = "1.1"
password-hash = "0.5.0"
rand = "0.8.5"
regex = "1.7.3"
serde = "1.0.158"
